--- a/rmd_work/ea_research_priorities_opportunities_rjs_sc_notes_within.Rmd
+++ b/rmd_work/ea_research_priorities_opportunities_rjs_sc_notes_within.Rmd
@@ -356,6 +356,8 @@ Also see the ‘curated links’ [HERE](https://github.com/daaronr/reinstein_web
 - [Rethink Priorities 2020 Impact and 2021 Strategy (includes broad agenda)](https://forum.effectivealtruism.org/posts/33AnPajNYmNrdXQbj/rethink-priorities-2020-impact-and-2021-strategy)
 
 
+- [8000 Hours research questions by discipline](https://80000hours.org/articles/research-questions-by-discipline/)
+
 - [Animal Charity Evaluators research](https://animalcharityevaluators.org/research/)
 
 ## Message
@@ -1409,7 +1411,7 @@ MAYBE  if you want to...
 
 ## Which fields?
 
-Economics: Both theory and empirical/application, development economics, behavioral, preference and choice theory, macrroeconomics, and more
+Economics: Both theory and empirical/application, development economics, behavioral, preference and choice theory, macroeconomics, and more
 
 Philosophy: The answers to 'arcane' philosophical questions are now driving  very important decisions and uses of funds
 
