--- a/rmd_work/ea_research_priorities_opportunities_rjs_sc_notes_within.Rmd
+++ b/rmd_work/ea_research_priorities_opportunities_rjs_sc_notes_within.Rmd
@@ -295,7 +295,7 @@ Also see the ‘curated links’ [HERE](https://github.com/daaronr/reinstein_web
 
 - [Guide: Researching and writing for Economics students](https://daaronr.github.io/writing_econ_research/about-this-work.html)
 
-- [Alternateves to academic journals proposal](https://docs.google.com/document/d/1GFISlF5TieCuA6jDYkYlNWaEpuEYrr_zTmaVpTfBg4A/edit#heading=h.iqq0k5uqyg8x)
+- [Alternatives to academic journals proposal](https://docs.google.com/document/d/1GFISlF5TieCuA6jDYkYlNWaEpuEYrr_zTmaVpTfBg4A/edit#heading=h.iqq0k5uqyg8x)
 
 
 ---
