--- a/docs/rp_ea_presentations/economics_at_rp.qmd
+++ b/docs/rp_ea_presentations/economics_at_rp.qmd
@@ -25,7 +25,7 @@ I assume you know, but in a (big) nutshell
 -   Quantitative 'measurers'\^1:
 -   Communicating w/ EAs/EA orgs/philanthropists (aspirational: academics & policymakers)
 -   Empirical, applied, helping EA-orgs and EA philanthropists
--   Incubating various projects, low-touch admin
+-   Incubating various projects, low-touch admin.
 -   Fully remote and international, \~US-competitive pay, we hire and want Economics Phds (among others)
 
 ::: footer
